--- a/package.json
+++ b/package.json
@@ -9,14 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/material-top-tabs": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@types/shortid": "^0.0.29",
     "expo": "~48.0.9",
+    "expo-linking": "^4.0.1",
     "expo-status-bar": "~1.4.4",
+    "jotai": "^2.0.3",
+    "lottie-react-native": "^6.0.0-rc.3",
+    "moti": "^0.24.2",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "6.1.2",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-vector-icons": "^9.2.0",
+    "shortid": "^2.2.16",
+    "styled-components": "^5.3.9",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "prettier": "^2.8.7",
     "typescript": "^4.9.4"
   },
   "private": true
