--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.3.0",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@types/shortid": "^0.0.29",
     "expo": "~48.0.9",
+    "expo-blur": "~12.2.2",
+    "expo-linear-gradient": "~12.1.2",
     "expo-linking": "^4.0.1",
     "expo-status-bar": "~1.4.4",
     "jotai": "^2.0.3",
@@ -25,6 +28,7 @@
     "react-native": "0.71.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-pager-view": "6.1.2",
+    "react-native-paper": "^5.5.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
