--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.8.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "shortid": "^2.2.16",
