--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@types/shortid": "^0.0.29",
+    "axios": "^1.3.4",
     "expo": "~48.0.9",
     "expo-blur": "~12.2.2",
+    "expo-crypto": "~12.2.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "^4.0.1",
     "expo-status-bar": "~1.4.4",
     "jotai": "^2.0.3",
     "lottie-react-native": "^6.0.0-rc.3",
+    "mfm-js": "^0.23.3",
+    "miauth.js": "Comamoca/miauth.js",
+    "misskey-js": "^0.0.15",
     "moti": "^0.24.2",
     "native-base": "^3.4.28",
     "react": "18.2.0",
@@ -36,12 +41,14 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "shortid": "^2.2.16",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "eslint-import-resolver-reactnative": "^1.0.2",
     "prettier": "^2.8.7",
     "typescript": "^4.9.4"
   },
