--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": "./",
+    "paths": {
+      "crawl/*": ["./*"]
+    }
   }
 }
