--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
+    "@types/js-yaml": "^4.0.5",
     "@types/shortid": "^0.0.29",
     "axios": "^1.3.4",
+    "content-transformer": "^0.2.0",
     "expo": "~48.0.9",
     "expo-blur": "~12.2.2",
     "expo-crypto": "~12.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-image": "~1.0.0",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "^4.0.1",
     "expo-status-bar": "~1.4.4",
     "jotai": "^2.0.3",
+    "js-yaml": "^4.1.0",
     "lottie-react-native": "^6.0.0-rc.3",
     "mfm-js": "^0.23.3",
     "miauth.js": "Comamoca/miauth.js",
@@ -31,6 +36,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-android-image-polyfill": "^1.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.5.2",
