--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/blur": "^4.3.0",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -17,6 +16,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/shortid": "^0.0.29",
     "axios": "^1.3.4",
+    "babel-plugin-dotenv-import": "^3.0.1",
     "content-transformer": "^0.2.0",
     "expo": "~48.0.9",
     "expo-blur": "~12.2.2",
@@ -34,10 +34,11 @@
     "misskey-js": "^0.0.15",
     "moti": "^0.24.2",
     "native-base": "^3.4.28",
+    "polished": "^4.2.2",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-android-image-polyfill": "^1.0.0",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.5.2",
     "react-native-reanimated": "~2.14.4",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint-import-resolver-reactnative": "^1.0.2",
     "prettier": "^2.8.7",
     "typescript": "^4.9.4"
