--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "resolveJsonModule": true,
     "baseUrl": "./",
     "paths": {
-      "crawl/*": ["./*"]
+      "@/*": ["./src/*"],
+      "assets/*": ["./src/assets/*"]
     }
   }
 }
