--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "@types/js-yaml": "^4.0.5",
     "@types/shortid": "^0.0.29",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "axios": "^1.3.4",
     "babel-plugin-dotenv-import": "^3.0.1",
     "content-transformer": "^0.2.0",
@@ -22,6 +25,7 @@
     "expo-blur": "~12.2.2",
     "expo-crypto": "~12.2.1",
     "expo-file-system": "~15.2.2",
+    "expo-haptics": "~12.2.1",
     "expo-image": "~1.0.0",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "^4.0.1",
@@ -50,7 +54,8 @@
     "shortid": "^2.2.16",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "why-did-you-render": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
