--- a/package.json
+++ b/package.json
@@ -43,14 +43,17 @@
     "react-native": "0.71.4",
     "react-native-android-image-polyfill": "^1.0.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-size": "^1.1.3",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.5.2",
     "react-native-reanimated": "~2.14.4",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-string-replace": "^1.1.0",
     "shortid": "^2.2.16",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
