--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/js-yaml": "^4.0.5",
     "@types/shortid": "^0.0.29",
     "@welldone-software/why-did-you-render": "^7.0.1",
@@ -53,6 +54,7 @@
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
     "react-string-replace": "^1.1.0",
     "shortid": "^2.2.16",
     "socket.io-client": "^4.6.1",
@@ -62,7 +64,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/clone": "^2.1.1",
     "@types/react": "~18.0.14",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux": "^3.6.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-import-resolver-reactnative": "^1.0.2",
     "prettier": "^2.8.7",
