--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
@@ -43,17 +46,20 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-android-image-polyfill": "^1.0.0",
+    "react-native-bottomsheet-reanimated": "^0.3.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-size": "^1.1.3",
+    "react-native-interactable-reanimated": "^0.0.15",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.5.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10",
     "react-redux": "^8.0.5",
     "react-string-replace": "^1.1.0",
     "shortid": "^2.2.16",
@@ -64,13 +70,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/datetimepicker": "^7.0.1",
+    "@react-native-community/slider": "^4.4.2",
     "@types/clone": "^2.1.1",
     "@types/react": "~18.0.14",
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
+    "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-import-resolver-reactnative": "^1.0.2",
     "prettier": "^2.8.7",
+    "prop-types": "^15.8.1",
+    "react-dom": "^18.2.0",
     "typescript": "^4.9.4"
   },
   "private": true
