--- a/package.json
+++ b/package.json
@@ -77,13 +77,21 @@
     "@types/react": "~18.0.14",
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": ">=8.0.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.57.0",
     "eslint-import-resolver-reactnative": "^1.0.2",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "react-dom": "^18.2.0",
-    "typescript": "^4.9.4"
+    "typescript": ">=4.4"
   },
   "private": true
 }
